<resources>
    <string name="app_name">ExoExplorer</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>

    <!-- PlanetListFragment -->
    <string name="no_data">No data</string>
    <string name="no_data_found">No data found with this type of parameters</string>
    <string name="no_favs_found">No favorites found with this name</string>
    <string name="search_view_hint">Search for planets</string>
    <string name="search_view_favs_hint">Search for your favorites</string>

    <!-- Alert Dialog messages -->
    <string name="api_key_error_title">API Key Error</string>
    <string name="api_key_error_msg">There\'s currently no API key configured or the configured key is wrong. To set an API key, please go to the settings and click on API key.</string>
    <string name="btn_ok">OK</string>

    <string name="double_type_error_title">Wrong input</string>
    <string name="double_type_error_msg">The input must be a number, e.g. 2.0</string>

    <!-- Preferences -->
    <string name="preferences_section_connection">Connection settings</string>
    <string name="preferences_api_key_title">API Key (api-ninjas.com)</string>
    <string name="preferences_api_key_dialog_title">Your API Key</string>
    <string name="preferences_api_key">api_key</string>
    <string name="preferences_section_configuration">Configuration</string>
    <string name="preferences_search_option_dialog_title">Search by</string>
    <string name="preferences_search_option">Search option</string>
    <string name="preferences_search_option_summary">Select the search option by which you want to discover planets</string>
    <string name="preferences_search_option_default_value">Name</string>
    <string name="preferences_search_option_key">search_option</string>
    <array name="search_options">
        <item>Name</item>
        <item>Min mass</item>
        <item>Max mass</item>
        <item>Min radius</item>
        <item>Max radius</item>
        <item>Min period</item>
        <item>Max period</item>
        <item>Min temperature</item>
        <item>Max temperature</item>
        <item>Min distance light year</item>
        <item>Max distance light year</item>
        <item>Min semi major axis</item>
        <item>Max semi major axis</item>
    </array>

    <!-- Planet details -->
    <string name="mass">Mass (in Jupiters)</string>
    <string name="radius">Radius (in Jupiters)</string>
    <string name="period">Orbital period of the planet (in Earth days)</string>
    <string name="temperature">Avg. temperature (in Kelvin)</string>
    <string name="semi_major_axis">Semi major axis (in AU)</string>
    <string name="hot_star_mass">Hot star mass</string>
    <string name="hot_star_temperature">Hot star mass temperature (in Kelvin)</string>
    <string name="distance_in_light_years">Distance in light years from earth</string>
</resources>